# tiger_research_buddy

./: .env.example  .env.jetson  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  ORIN_SETUP.sh  README.md  ``  api.py  export_csvs.py  frontend_dump_for_figma.txt  index_all.py  index_papers.py  main.py  notebookllm_source.txt  pyproject.toml  pytest.ini  reindex.py  requirements.txt  run_pipeline.py  start_ollama.sh  swap_data.sh  test_chroma.py  test_gmft.py  test_marker.py  test_surya.py  test_vision.py  tmp_test_marker.py  web_app.py
.jules/: bolt.md
.streamlit/: config.toml
data/: .gitkeep  edges.csv  nodes.csv
data_next/: entity_mappings.json  rit_data_v2.json  tiger_brain.json  tiger_research.db
docs/: IMPLEMENTATION_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  architecture_discussion.md  claudesuggestions.txt  comprehensive_analysis.txt  entity_extraction_strategies.md  final_implementation_plan.md  future_roadmap_ideas.md  gemini_research_prompt.md  knowledge_daemon_design.md  migration_reasons.txt  plan_v2_migration.md  progress_log.md  project_journey.md  project_pitch.md  technical_report_experiment_4.md  tiger_brain_wiki.md  unified_graph_design.md  user_suggestions.txt  user_suggestions_results.txt  vision_enrichment_plan.md
experiments/: marker_test.md  output_alejandro_feynman.md  output_apple_fast_verified.md  output_mixed_rotated_apple_fast.md
frontend/: next.config.ts  package-lock.json  package.json  patch-cosmograph.js
plans/: 00-decisions.md  00-research-brief.md  README.md  _findings.json  convergence-report.md  critique-log.md  (+12 more)
(+1453 files in other folders)
