[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiger_research_buddy"
version = "0.1.0"
description = "AI Agent for RIT Research Discovery"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "scholarly>=1.7.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "google-search-results>=2.4.0",
    "streamlit>=1.30.0",
    "ollama>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
